# telegram_fwd

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  bot.py  cache_peer.py  config.py  docker-compose.yml  initialize_contact.py  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh
